adicion de componentes

--- a/clase1/src/app/app.component.html
+++ b/clase1/src/app/app.component.html
@@ -1,15 +1,18 @@
+<app-navegacion></app-navegacion>
+
 <div class="fondo">
-<h1>{{title}}</h1>
+    <h1>{{title}}</h1>
+    <p>{{descripcion}}</p>
 
-<p>{{descripcion}}</p>
 
-<h2>numero 1</h2>
-<img src= {{juego.img}}>
 
-<p>ir a web</p>
+    <app-juego/>
+  
 
-<a href={{juego.link}}> boton</a>
+
 
 
 
 </div>
+
+
