--- a/clase1/src/app/app.component.html
+++ b/clase1/src/app/app.component.html
@@ -4,7 +4,7 @@
     <h1>{{title}}</h1>
     <p>{{descripcion}}</p>
 
-
+ 
 
     <app-juego/>
   
@@ -14,5 +14,7 @@
 
 
 </div>
+
+<app-video></app-video>
 
 
